     specific file to diff within ``branch1``.

  FEATURES:

   * New option to use custom template-based formats in  ``bzr version-info``.
     (Lukáš Lalinský)

  IMPROVEMENTS:

   * ``branch`` and ``checkout`` can now use files from a working tree to
     to speed up the process.  For checkout, this requires the new
     --files-from flag.  (Aaron Bentley)

   * ``bzr diff`` now sorts files in alphabetical order.  (Aaron Bentley)

   * ``bzr diff`` now works on branches without working trees. Tree-less
     branches can also be compared to each other and to working trees using
     the new diff options ``--old`` and ``--new``. Diffing between branches,
     with or without trees, now supports specific file filtering as well.
     (Ian Clatworthy, #6700)

   * ``bzr pack`` now orders revision texts in topological order, with newest
     at the start of the file, promoting linear reads for ``bzr log`` and the
     like. This partially fixes #154129. (Robert Collins)

   * Merge directives now fetch prerequisites from the target branch if
     needed.  (Aaron Bentley)

   * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)

   * ``-l`` is now a short form for ``--limit`` in ``log``.  (Matt Nordhoff)

   * ``merge`` now warns when merge directives cause cherrypicks.
     (Aaron Bentley)

   * ``split`` now supported, to enable splitting large trees into smaller
     pieces.  (Aaron Bentley)

  BUGFIXES:

   * Fixed Unicode encoding error in ``ignored`` when the output is
     redirected to a pipe. (Lukáš Lalinský)

   * Fix traceback when sending large response bodies over the smart protocol
     on Windows. (Andrew Bennetts, #115781)

   * Transform failures no longer cause ImmortalLimbo errors (Aaron Bentley,
     #137681)

   * ``uncommit`` works even when the commit messages of revisions to be
     removed use characters not supported in the terminal encoding.
     (Aaron Bentley)
